--- a/SchoolManagement/SchoolManagement.Presentation/SchoolManagement.Presentation.csproj
+++ b/SchoolManagement/SchoolManagement.Presentation/SchoolManagement.Presentation.csproj
@@ -194,6 +194,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
+    <Content Include="Views\Shared\_HomeNavbar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
